Stats-7: Fix button always visible display issue
Also add icon.

--- a/src/Components/ScrollToTopButton/ScrollToTopButton.scss
+++ b/src/Components/ScrollToTopButton/ScrollToTopButton.scss
@@ -1,15 +1,18 @@
 #Back-to-top-button {
-  height:5em;
-  width: 5em;
+  height:3em;
+  width: 3em;
   float: right;
   outline: None;
-  background-color: greenyellow;
+  border: none;
+  border-radius: 0.5em;
+  background-color: #93E7FF;
   position: -webkit-sticky; /* Safari */
   position: sticky;
   bottom: 1em;
   right: 1em;
 
   &:hover {
-    background-color: blue;
+    background-color: #211CE7;
+    color: #FFFFFF;
   }
 }
